--- a/flooding_lib/templates/flooding/index.html
+++ b/flooding_lib/templates/flooding/index.html
@@ -16,11 +16,11 @@ Lizard-flooding: Main
         <!--
             BROKEN STUFF, USE LIZARD BASE
 	<ul>
-		<li><a href="{% url flooding_result_list %}">{% trans 'Results' %}</a></li>
-		<li><a href="{% url flooding_projects_url %}">{% trans 'Projects' %}</a></li>
-		<li><a href="{% url flooding_scenarios_url %}">{% trans 'Scenarios' %}</a></li>
+		<li><a href="{% url "flooding_result_list" %}">{% trans 'Results' %}</a></li>
+		<li><a href="{% url "flooding_projects_url" %}">{% trans 'Projects' %}</a></li>
+		<li><a href="{% url "flooding_scenarios_url" %}">{% trans 'Scenarios' %}</a></li>
 		<li><a href="{# url flooding_legend_list #}">{% trans 'Legends' %}</a></li>
-		<li><a href="{% url flooding_task_list %}">{% trans 'Tasks' %}</a></li>
+		<li><a href="{% url "flooding_task_list" %}">{% trans 'Tasks' %}</a></li>
 	</ul>
         -->
 </p>
