--- a/flooding_lib/templates/flooding/infowindow_approval_total.html
+++ b/flooding_lib/templates/flooding/infowindow_approval_total.html
@@ -30,7 +30,7 @@
             }
 
             RPCManager.sendRequest({
-               actionURL: '{% url infowindow %}{{ url_args|safe}}',
+               actionURL: '{% url "infowindow" %}{{ url_args|safe}}',
                useSimpleHttp: true,
                httpMethod: "POST",
                params: postParams,
