--- a/flooding_lib/tools/exporttool/templates/export/exports_run_detail.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_run_detail.html
@@ -4,9 +4,9 @@
 {% block title %}Lizard export detail{% endblock %}
 {% block stylesheets %}
 		<link rel="shortcut icon" href="{{ url_favicon }}">
-		<link href="{% url root_url %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
-		<link href="{% url root_url %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
-		<link href="{% url root_url %}static_media/Isomorphic_NenS_skin/skin_styles.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/Isomorphic_NenS_skin/skin_styles.css" media="screen" type="text/css" rel="stylesheet">
 {% endblock stylesheets %}
 
 
@@ -62,7 +62,7 @@
 				<tr class="cell">
 					<td><b>{% trans "Used scenarios and projects (x out of y)" %}</b></td>
 					<td>
-						<a href="{% url flooding_tools_export_detail_scenarios export_run_id=export_run.id %}">{{ num_scenarios }} {% trans "out of" %} {{num_projects}}</a>
+						<a href="{% url "flooding_tools_export_detail_scenarios" export_run_id=export_run.id %}">{{ num_scenarios }} {% trans "out of" %} {{num_projects}}</a>
 					</td>
 				</tr>
 				<tr class="cellDark">
@@ -73,7 +73,7 @@
 					<td><b>{% trans "Result file" %}</b></td>
 					<td>
 						{% if path %}
-							<a href="{% url flooding_tools_export_index %}?action=get_attachment&path={{path}}">{% trans "Result file" %}</a>
+							<a href="{% url "flooding_tools_export_index" %}?action=get_attachment&path={{path}}">{% trans "Result file" %}</a>
 						{% else %}
 							-
 						{% endif %}
