--- a/flooding_lib/tools/importtool/templates/import/import_file_upload.html
+++ b/flooding_lib/tools/importtool/templates/import/import_file_upload.html
@@ -7,8 +7,8 @@
 
 {% block stylesheets %}
 		<link rel="shortcut icon" href="{{ url_favicon }}">
-		<link href="{% url root_url %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
-		<link href="{% url root_url %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
 {% endblock stylesheets %}
 {
 {% block content %}
@@ -16,13 +16,13 @@
      {% trans 'Het opslaan is gelukt. U kunt een nieuw bestand toevoegen of dit venster sluiten.' %}
 {% endif %}
 
-<form action="{% url flooding_tools_upload_files import_scenario_id %}" enctype="multipart/form-data" method="post">
+<form action="{% url "flooding_tools_upload_files" import_scenario_id %}" enctype="multipart/form-data" method="post">
 <h1>{% trans 'Add files' %}</h1>
    	{%if file_urls %}
    	    <h2>{% trans 'Already uploaded files' %}</h2>
 
 		{% for fileurl in file_urls %}
-		<a href="{% url flooding_service %}?action=get_import_scenario_uploaded_file&path={{fileurl.0}}">{{fileurl.1}}</a><BR>
+		<a href="{% url "flooding_service" %}?action=get_import_scenario_uploaded_file&path={{fileurl.0}}">{{fileurl.1}}</a><BR>
 		{% endfor %}
 		<BR><BR>
 	{% endif %}
