--- a/flooding_lib/tools/templates/tools/index.html
+++ b/flooding_lib/tools/templates/tools/index.html
@@ -12,8 +12,8 @@ Lizard-flooding: Tools
 <p>
 {% trans 'Welcome to Lizard-flooding tools. Follow one of the links below:' %}
 	<ul>
-		<li><a href="{% url flooding_tools_import %}">{% trans 'Import scenarios' %}</a></li>
-		<li><a href="{% url flooding_tools_export %}">{% trans 'Export / generate water depth maps' %}</a></li>
+		<li><a href="{% url "flooding_tools_import" %}">{% trans 'Import scenarios' %}</a></li>
+		<li><a href="{% url "flooding_tools_export" %}">{% trans 'Export / generate water depth maps' %}</a></li>
 	</ul>
 </p>
 
