--- a/flooding_visualization/templates/visualization/legend_shapedata_grid.html
+++ b/flooding_visualization/templates/visualization/legend_shapedata_grid.html
@@ -1,4 +1,4 @@
-<link href="{% url root_url %}static_media/style/legend.css" rel="stylesheet" type="text/css">
+<link href="{% url "root_url" %}static_media/style/legend.css" rel="stylesheet" type="text/css">
 
 {% if colormaps %}
   <div class="colormapcontrol">Colormap:<br/>
