--- a/flooding_lib/sharedproject/templates/sharedproject/dashboard.html
+++ b/flooding_lib/sharedproject/templates/sharedproject/dashboard.html
@@ -7,7 +7,7 @@ Flooding: {% trans 'Share scenarios' %}
 {% endblock %}
 
 {% block content %}
-<script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
 <h2>{{ view.project }} dashboard</h2>
 
 {% if view.messages %}
@@ -36,13 +36,13 @@ Flooding: {% trans 'Share scenarios' %}
 <td>{{ stats.notyetapproved }}</td>
 <td>
 {% if stats.amount %}
-<a href="{% url sharedproject_dashboard_excel "ror" province.id %}{{ province.name }}.xls">Download</a>
+<a href="{% url "sharedproject_dashboard_excel" "ror" province.id %}{{ province.name }}.xls">Download</a>
 {% endif %}
 </td>
 <td>
 {% if stats.amount %}
 <form
-   action="{% url sharedproject_dashboard_excel "ror" province.id %}"
+   action="{% url "sharedproject_dashboard_excel" "ror" province.id %}"
    enctype="multipart/form-data"
    method="post">
 {% csrf_token %}
