--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -11,8 +11,8 @@ Flooding: {% trans 'Breach information' %}
 
 {% block javascripts %}
 <script type="text/javascript" src="/static_media/weblib/OpenLayers-2.8/OpenLayers.js" type="text/javascript"> </script>
-<script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="{% url root_url %}static_media/flooding_lib/breachinfo.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/flooding_lib/breachinfo.js"></script>
 {% endblock javascripts %}
 
 {% block content %}
@@ -39,7 +39,7 @@ Flooding: {% trans 'Breach information' %}
     <tr>
       <td><input type="checkbox" class="checkbox-scenario" data-scenario-id="{{ scenario.id }}" checked="checked"/></td>
       <td>{{ scenario.id }}</td>
-      <td><a href="{% url preload_scenario_redirect view.project_id scenario.id %}">{{ scenario }}</a></td>
+      <td><a href="{% url "preload_scenario_redirect" view.project_id scenario.id %}">{{ scenario }}</a></td>
       <td>{{ scenario.main_project }}</td>
       <td>{{ scenario.frequency }}</td>
       <td>
@@ -61,7 +61,7 @@ Flooding: {% trans 'Breach information' %}
         {% endif %}
       </td>
       <td>
-        <a href="{% url flooding_results_zipped scenario_id=scenario.id %}">download</a>
+        <a href="{% url "flooding_results_zipped" scenario_id=scenario.id %}">download</a>
       </td>
     </tr>
     {% endfor %}
@@ -69,7 +69,7 @@ Flooding: {% trans 'Breach information' %}
   </table>
 </div>
 
-<p><a href="{% url flooding_breachinfo_page_excel view.project_id view.breach_id %}">Download deze tabel als Excel file</a></p>
+<p><a href="{% url "flooding_breachinfo_page_excel" view.project_id view.breach_id %}">Download deze tabel als Excel file</a></p>
 {% for scenario in view.scenarios %}
 {% if scenario.max_waterdepth_layer %}
 <div id="mapcontainer-{{scenario.id}}" style="float: left; width: 410px;">
