--- a/flooding_lib/templates/flooding/compose_3di_scenario.html
+++ b/flooding_lib/templates/flooding/compose_3di_scenario.html
@@ -8,18 +8,18 @@
 	<link rel="shortcut icon" href="static_media/images/lizard_webinterface_favicon2.ico">
 
 	<script> 
-	var isomorphicDir="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/"; // abs path to isomorphic, needed to locate SmartClient CSS
+	var isomorphicDir="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/"; // abs path to isomorphic, needed to locate SmartClient CSS
 	</script>
 
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Core.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Foundation.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Containers.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Grids.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Forms.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_DataBinding.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/Isomorphic_NenS_skin/load_skin.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/scripts/shared/SCpatch.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/scripts/shared/lib/NGeneral.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Core.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Foundation.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Containers.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Grids.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Forms.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_DataBinding.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/Isomorphic_NenS_skin/load_skin.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/SCpatch.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/lib/NGeneral.js"></SCRIPT>
 
 </head>
 <body>
@@ -32,7 +32,7 @@
 	isc.DataSource.create({
 	    ID:"dsPostScenario",
 	    dataFormat:"json",
-	    dataURL: '{% url root_url %}flooding/service/',
+	    dataURL: '{% url "root_url" %}flooding/service/',
         requestProperties: { httpMethod: "POST" },
 	    autoDraw:false
 	});
@@ -218,7 +218,7 @@
 					}
 			}
 			{% endif %}
-			var url = '{% url root_url %}flooding/service/?';
+			var url = '{% url "root_url" %}flooding/service/?';
 
 			var first = true;
 			for (elem in args) {
@@ -229,7 +229,7 @@
 			}
 
 			RPCManager.sendRequest({
-							 actionURL: '{% url root_url %}flooding/service/',
+							 actionURL: '{% url "root_url" %}flooding/service/',
 							 useSimpleHttp: true,
 							 showPrompt:true,
 							 httpMethod: "POST",
@@ -250,7 +250,7 @@
 							 callback: function(response, data, request){
 				                if (response.httpResponseCode == 200) {
 				                    console.log("Data ophalen gelukt.");
-				                    scGraph.setSrc('{% url root_url %}flooding/service/?action=get_externalwater_graph_session&ct='+(new Date).valueOf())
+				                    scGraph.setSrc('{% url "root_url" %}flooding/service/?action=get_externalwater_graph_session&ct='+(new Date).valueOf())
 				                	}
 				                	else {
 				                    console.log("Fout bij het ophalen van gegevens.");
@@ -277,7 +277,7 @@
 		args.extwbaselevel = formScenarioSettings.getValue('extwbaselevel');
 
 		args.action = 'get_externalwater_csv';
-		var url = '{% url root_url %}flooding/service/?';
+		var url = '{% url "root_url" %}flooding/service/?';
 
 		var first = true;
 		for (elem in args) {
