--- a/flooding_lib/templates/flooding/excel_import_export.html
+++ b/flooding_lib/templates/flooding/excel_import_export.html
@@ -7,8 +7,8 @@ Flooding: Metadata update
 {% endblock %}
 
 {% block content %}
-<script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="{% url root_url %}static_media/flooding_lib/share_scenarios.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/flooding_lib/share_scenarios.js"></script>
 
 <h1>{{ view.title }}</h1>
 
@@ -18,7 +18,7 @@ Flooding: Metadata update
 {% for project in view.projects %}
 <tr>
 <td>{{ project.name }}</td>
-<td><a href="{% url flooding_excel_import_export_project project.id %}">Down- en upload het Excel bestand voor dit project</td></p>
+<td><a href="{% url "flooding_excel_import_export_project" project.id %}">Down- en upload het Excel bestand voor dit project</td></p>
 </tr>
 {% endfor %}
 </table>
