--- a/flooding_lib/templates/flooding/legend_add.html
+++ b/flooding_lib/templates/flooding/legend_add.html
@@ -22,17 +22,17 @@ Legend details
 {% for color in legend.legendcolor_set.all %}
 <li>{{ color.friendly_string }}
 {% if has_edit_permission %}
-&nbsp;<a href="{% url flooding_legend_color_delete object_id=color.id %}">delete</a>
+&nbsp;<a href="{% url "flooding_legend_color_delete" object_id=color.id %}">delete</a>
 {% endif %}
 </li>
 {% endfor %}
 {% if has_edit_permission %}
-<li><a href="{% url flooding_legend_color_add object_id=legend.id %}">add</a></li>
+<li><a href="{% url "flooding_legend_color_add" object_id=legend.id %}">add</a></li>
 {% endif %}
 </ul>
 
 <h2>Preview</h2>
-<img src="{% url flooding_legend_detail_png object_id=legend.id %}"/>
+<img src="{% url "flooding_legend_detail_png" object_id=legend.id %}"/>
 {% endif %}
 
 
