--- a/flooding_lib/templates/flooding/legend_detail.html
+++ b/flooding_lib/templates/flooding/legend_detail.html
@@ -8,12 +8,12 @@
 {% for color in object.legendcolor_set.all %}
 <li>{{ color }}
 {% if has_edit_permission %}
-&nbsp;<a href="">edit</a>&nbsp;<a href="{% url flooding_legend_color_delete object_id=color.id %}">delete</a>
+&nbsp;<a href="">edit</a>&nbsp;<a href="{% url "flooding_legend_color_delete" object_id=color.id %}">delete</a>
 {% endif %}
 </li>
 {% endfor %}
 {% if has_edit_permission %}
-<li><a href="{% url flooding_legend_color_add object_id=object.id %}">add</a></li>
+<li><a href="{% url "flooding_legend_color_add" object_id=object.id %}">add</a></li>
 {% endif %}
 </ul>
 {% endblock %}
