--- a/flooding_lib/templates/flooding/scenario_list.html
+++ b/flooding_lib/templates/flooding/scenario_list.html
@@ -15,23 +15,23 @@ Lizard-flooding: {% trans 'Scenarios' %}
 {% endblock %}
 
 {% block content %}
-<script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
 
 {% if can_approve %}
-<p><a href="{% url flooding_scenario_share_list %}">{% trans "Offer a scenario for use in the ROR and/or national use projects" %}</a></p>
+<p><a href="{% url "flooding_scenario_share_list" %}">{% trans "Offer a scenario for use in the ROR and/or national use projects" %}</a></p>
 {% endif %}
 <h1>{% trans 'Scenario list' %}</h1>
 <p>
 	<div  style="overflow:auto">
 		{% search search_fields %}
-		<a href="{% url flooding_scenario_add %}"><img src="{% url root_url %}static_media/images/icons/add.png" title="{% trans 'create scenario' %}"/></a>
-		<a href="{% url flooding_scenarios_url %}?format=csv">{% trans 'Export as CSV' %}</a>
+		<a href="{% url "flooding_scenario_add" %}"><img src="{% url "root_url" %}static_media/images/icons/add.png" title="{% trans 'create scenario' %}"/></a>
+		<a href="{% url "flooding_scenarios_url" %}?format=csv">{% trans 'Export as CSV' %}</a>
 		{% objecttable name table_columns table_data fields.sort %}
 		{% digg_paginator fields %}
 		<script type="text/javascript">
 		  function updateBreaches() {
 		    region_id = $('#search_region').val();
-		    $.getJSON('{% url flooding_service %}?action=get_breaches&region_id='+region_id, function(json) {
+		    $.getJSON('{% url "flooding_service" %}?action=get_breaches&region_id='+region_id, function(json) {
 		      if (json.length > 0) {
     		        $('#search_breach').attr('disabled', false);
 		          result_html = '<option selected="" value="0">{% trans 'All breaches' %}</option>';
