--- a/flooding_lib/templates/flooding/scenario_share_list.html
+++ b/flooding_lib/templates/flooding/scenario_share_list.html
@@ -7,8 +7,8 @@ Flooding: {% trans 'Share scenarios' %}
 {% endblock %}
 
 {% block content %}
-<script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="{% url root_url %}static_media/flooding_lib/share_scenarios.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{% url "root_url" %}static_media/flooding_lib/share_scenarios.js"></script>
 
 <h1>{% trans 'Share scenarios' %}</h1>
 
