--- a/flooding_lib/templates/flooding/select_strategy.html
+++ b/flooding_lib/templates/flooding/select_strategy.html
@@ -8,18 +8,18 @@
 	<link rel="shortcut icon" href="static_media/images/lizard_webinterface_favicon2.ico">
 
 	<script> 
-	var isomorphicDir="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/"; // abs path to isomorphic, needed to locate SmartClient CSS
+	var isomorphicDir="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/"; // abs path to isomorphic, needed to locate SmartClient CSS
 	</script>
 
-	<SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Core.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Foundation.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Containers.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Grids.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Forms.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_DataBinding.js"></SCRIPT>
-	<SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/Isomorphic_NenS_skin/load_skin.js"></SCRIPT>
-	<SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/scripts/shared/SCpatch.js"></SCRIPT>
-	<SCRIPT type="text/javascript" SRC="{% url root_url %}static_media/scripts/shared/lib/NGeneral.js"></SCRIPT>
+	<SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Core.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Foundation.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Containers.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Grids.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Forms.js"></SCRIPT>
+    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_DataBinding.js"></SCRIPT>
+	<SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/Isomorphic_NenS_skin/load_skin.js"></SCRIPT>
+	<SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/SCpatch.js"></SCRIPT>
+	<SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/lib/NGeneral.js"></SCRIPT>
 
 </head>
 <body>
@@ -29,7 +29,7 @@
     isc.DataSource.create({
 	    ID:"dsPostScenario",
 	    dataFormat:"json",
-	    dataURL: '{% url root_url %}flooding/service/',
+	    dataURL: '{% url "root_url" %}flooding/service/',
         requestProperties: { httpMethod: "POST" },
 	    autoDraw:false
 	});
@@ -82,7 +82,7 @@
             if (selected_strategies.length > 0){
                 RPCManager.sendRequest(
                     {
-                        actionURL: '{% url root_url %}flooding/service/',
+                        actionURL: '{% url "root_url" %}flooding/service/',
                         useSimpleHttp: true,
 		        showPrompt:true,	    					 					 
 		        httpMethod: "POST",			 
