--- a/flooding_lib/tools/exporttool/templates/export/exports_run_detail_scenarios_and_projects.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_run_detail_scenarios_and_projects.html
@@ -3,9 +3,9 @@
 {% block title %}Lizard export detail{% endblock %}		
 {% block stylesheets %}		
 		<link rel="shortcut icon" href="{{ url_favicon }}">
-		<link href="{% url root_url %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
-		<link href="{% url root_url %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
-		<link href="{% url root_url %}static_media/Isomorphic_NenS_skin/skin_styles.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/Isomorphic_NenS_skin/skin_styles.css" media="screen" type="text/css" rel="stylesheet">
 {% endblock stylesheets %}
 	
 {% block bodyarguments %} class="scrollable" {% endblock %}
