--- a/flooding_lib/tools/importtool/templates/import/groupimport_new.html
+++ b/flooding_lib/tools/importtool/templates/import/groupimport_new.html
@@ -3,8 +3,8 @@
 {% block title %}Lizard import tool{% endblock %}
 {% block stylesheets %}
 		<link rel="shortcut icon" href="{{ url_favicon }}">
-		<link href="{% url root_url %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
-		<link href="{% url root_url %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/style.css" media="screen" type="text/css" rel="stylesheet">
+		<link href="{% url "root_url" %}static_media/style/forms.css" media="screen" type="text/css" rel="stylesheet">
 
 {% endblock stylesheets %}
 {% block bodyarguments %}{% endblock %}
@@ -18,7 +18,7 @@
 		</ul>
 
 		<BR>
-		<form action="{% url flooding_tools_import_group %}" enctype="multipart/form-data" method="post">
+		<form action="{% url "flooding_tools_import_group" %}" enctype="multipart/form-data" method="post">
     		<table>
         		{{ form.as_table }}
         		<tr><td><input type="submit" value="{% trans 'Submit' %}" /></td></tr>
