--- a/flooding_base/templates/gui/index.html
+++ b/flooding_base/templates/gui/index.html
@@ -34,7 +34,7 @@
 
     var flooding_config = {{ javascript_parameters|safe }};
     flooding_config.static_url = '{{ STATIC_URL }}';
-    flooding_config.next_language = '{{ next_language }}';   
+    flooding_config.next_language = '{{ next_language }}';
     {% comment %}For direct links to scenarios. See the preload code in
     scripts/flooding/results/navigation.js.{% endcomment %}
     flooding_config.preload_scenario = {{ preload_scenario|safe }};
@@ -43,10 +43,10 @@
     {% if user.is_authenticated %}\
            <strong>{% firstof user.first_name user.username %}</strong> | \
      {% block userlinks %}\
-	   <a href="{% url "help_url" %}" onclick="popupwindow=window.open(\'{%url help_url %}\', \'popupwindow\',\'height=600,width=800,top=10,left=10,resizable\');return false;">{% trans 'help' %}</a> | <a href="{% url "userconfiguration_url" %}" onclick="popupwindow=window.open(\'{% url "userconfiguration_url" %}\', \'popupwindow\',\'height=600,width=800,top=10,left=10,resizable\');return false;">{% trans 'settings' %}</a> | <a href="{% url "logout_url" %}?next={% url "root_url" %}">{% trans 'Log out' %}</a>\
+	   <a href="{% url 'help_url' %}" onclick="popupwindow=window.open(\'{%url 'help_url' %}\', \'popupwindow\',\'height=600,width=800,top=10,left=10,resizable\');return false;">{% trans 'help' %}</a> | <a href="{% url 'userconfiguration_url' %}" onclick="popupwindow=window.open(\'{% url "userconfiguration_url" %}\', \'popupwindow\',\'height=600,width=800,top=10,left=10,resizable\');return false;">{% trans 'settings' %}</a> | <a href="{% url 'logout_url' %}?next={% url 'root_url' %}">{% trans 'Log out' %}</a>\
      {% endblock %}\
     {% else %}\
-     <a href="{% url "login_url" %}?next={% url "root_url" %}">{% trans 'Log in' %}</a>\
+     <a href="{% url 'login_url' %}?next={% url 'root_url' %}">{% trans 'Log in' %}</a>\
     {% endif %} | \
     </div></td></tr></table>';
 
