--- a/flooding_base/templates/lizard/base.html
+++ b/flooding_base/templates/lizard/base.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-{% load adminmedia %}
 {% comment %}
 options (incomplete):
    is_embedded: if True, removes header
@@ -11,7 +10,7 @@ options (incomplete):
     <title>{% block title %}Base template{% endblock %}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
     {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ STATIC_URL }}admin/css/base.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ STATIC_URL }}style/style.css"/>
     <link rel="stylesheet" type="text/css" media="print" href="{{ STATIC_URL }}style/print.css"/>
     {% endblock stylesheets %}
@@ -28,7 +27,7 @@ options (incomplete):
         </div>
         <div id="user-tools">
 	{% if user.is_authenticated %}
-        {% trans 'Welcome,' %} <a href="{% url "root_url" %}"><strong>{% firstof user.first_name user.username %}</strong></a>. {% block userlinks %}{% url "django"-admindocs-docroot as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% trans 'Documentation' %}</a> / {% endif %}<a href="{% url "password_change_url" %}?next={% url "root_url" %}">{% trans 'Change password' %}</a> / <a href="{% url "logout_url" %}?next={% url "root_url" %}">{% trans 'Log out' %}</a>{% endblock %}
+        {% trans 'Welcome,' %} <a href="{% url "root_url" %}"><strong>{% firstof user.first_name user.username %}</strong></a>. {% block userlinks %}{% url "django-admindocs-docroot" as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% trans 'Documentation' %}</a> / {% endif %}<a href="{% url "password_change_url" %}?next={% url "root_url" %}">{% trans 'Change password' %}</a> / <a href="{% url "logout_url" %}?next={% url "root_url" %}">{% trans 'Log out' %}</a>{% endblock %}
 	{% else %}
 	<a href="{% url "login_url" %}?next={% url "root_url" %}">{% trans 'Log in' %}</a>
 	{% endif %}
