--- a/flooding_lib/tools/exporttool/templates/export/exports_new.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_new.html
@@ -40,6 +40,9 @@
 	  <br>
               {{form.export_inundation_sources}}
               {{form.export_inundation_sources.label_tag}}
+	  <hr>
+              {{form.export_everything_as_zip}}
+              {{form.export_everything_as_zip.label_tag}}
 	</td>
       </tr>
       <tr>
