Renamed export_everything_as_zip to the more-sanely-named field from Remco

--- a/flooding_lib/tools/exporttool/templates/export/exports_new.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_new.html
@@ -41,8 +41,8 @@
               {{form.export_inundation_sources}}
               {{form.export_inundation_sources.label_tag}}
 	  <hr>
-              {{form.export_everything_as_zip}}
-              {{form.export_everything_as_zip.label_tag}}
+              {{form.export_scenario_data}}
+              {{form.export_scenario_data.label_tag}}
 	</td>
       </tr>
       <tr>
